test/cherry/Language/generic_list_unit_element_error.cherry
# RUN: not cherry-driver -typecheck %s 2>&1 | FileCheck %s

fn bad(xs: List<()>): UInt64 {
  0
}

fn main(): UInt64 {
  0
}

# CHECK: error: unexpected unit type
